# uart-arduino

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  uart.c  uart.h  uart_example.c
src/: main.c  uart.c  uart.h  uart_example.c
